# makemarbles

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: main.py
core/: config.py  crypto.py  identity.py  model_download.py  models.py  oplog.py  remote.py  search.py  storage.py  sync.py  vector.py  wire.py
docs/: SPEC.md
docs/adr/: 2026-06-03-product-positioning.md  2026-06-13-embedding-model.md  2026-06-24-sync-server-architecture.md
marbles_mcp/: server.py
tests/: test_cli.py  test_config.py  test_crypto.py  test_identity.py  test_mcp_server.py  test_model_download.py  test_oplog.py  test_search.py  test_storage.py  test_sync.py  test_vector.py  test_wire.py
tools/: eval_semantic.py
tools/eval/: semantic_eval.json
worker/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
worker/migrations/: 0001_accounts.sql
worker/src/: account-do.ts  auth.ts  crypto.ts  index.ts  registry.ts
worker/test/: golden.json  push-pull.test.ts
