[project]
name = "makemarbles"
version = "0.1.0a0"
description = "Local-first AI journal with dual-channel I/O (human CLI + LLM-callable MCP)"
authors = [{ name = "Gamma Land", email = "gammaland3d@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
keywords = ["journal", "notes", "ai", "mcp", "cli", "local-first"]

dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "sqlite-utils>=3.36",
    "rich>=13.7",
    "python-ulid>=2.7",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
marbles = "cli.main:app"
marbles-mcp = "marbles_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "core", "marbles_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
